# flet-monte-carlo-pi

./: .gitignore  LICENSE  README.md  main.py  pi_core.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
tests/: test_pi_core.py
